even color variable changed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ $header: #f9fafb;
     --secondary: #1F4B43;
     --header: #f9fafb;
     --span: #ededed;
-    --even: #b7d2fd;
+    --even: #d9e6fc;
 }
 
 @mixin flex-center {
