--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -77,7 +77,7 @@
 
                 input {
                     padding: 0.875rem;
-                    border: 1px solid #d0d5dd;
+                    border: 1px solid $border;
                     border-radius: 0.375rem;
                     color: $primary;
                     caret-color: $primary;
@@ -93,12 +93,12 @@
                     }
 
                     &:valid {
-                        border: 1.5px solid #039855;
+                        border: 1.5px solid $success;
                     }                    
                 }
 
                 .error {
-                    color: #ef4444;
+                    color: $orange;
                     font-size: 0.75rem;
                     @include justify-between;
                 }
@@ -131,7 +131,7 @@
                 }
 
                 &:disabled {
-                    background-color: #757575;
+                    background-color: $disabled;
                     cursor: not-allowed;
                 }
             }
