--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -76,7 +76,7 @@
 
                 input {
                     padding: 0.875rem;
-                    border: 1px solid #d0d5dd;
+                    border: 1px solid $border;
                     border-radius: 0.375rem;
                     color: $primary;
                     caret-color: $primary;
@@ -92,7 +92,7 @@
                     }
 
                     &:valid {
-                        border: 1.5px solid #039855;
+                        border: 1.5px solid $success;
                     }
                 }
 
@@ -129,7 +129,7 @@
                 }
 
                 &:disabled {
-                    background-color: #757575;
+                    background-color: $disabled;
                     cursor: not-allowed;
                 }
             }
