color variables added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@ $yellow: #E7C873;
 $orange: #EB664E;
 $secondary: #1F4B43;
 $header: #f9fafb;
+$border: #d0d5dd;
+$success: #039855;
+$disabled: #757575;
 
 :root {
     --white: #fff;
