--- a/src/app/landing-page/listing/listing.component.html
+++ b/src/app/landing-page/listing/listing.component.html
@@ -7,15 +7,12 @@
             Explore these top listings to find your dream home today.
         </p>
    </div>
-   <div class="card">
-        <!-- <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/>
-        <app-listing-card/> -->
+   <div class="card" *ngIf="listings$ | async as listings">
+        @for (list of listings.home_search.results | slice:0:8; track list.property_id) {
+            <ng-container *ngIf="list.primary_photo?.href">
+                <app-listing-card [listing]="list"></app-listing-card>
+            </ng-container>
+        }
    </div>
    <button routerLink="/listings" type="button" class="listing-btn">
         See All Listing
