router link updated to use absolute paths

--- a/src/app/shared/listing-card/listing-card.component.html
+++ b/src/app/shared/listing-card/listing-card.component.html
@@ -1,4 +1,4 @@
-<div class="listing-card" routerLink="{{listing().property_id}}">
+<div class="listing-card" routerLink="/listings/{{listing().property_id}}">
     <img [src]="listing().primary_photo?.href" class="listing-img" alt="">
     <div class="sale_type">
         <button 
